ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-apache
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.jvargas.com
    http:
      paths:
      - path: /apache
        backend:
          serviceName: apache
          #servicePort: 80
